Fixed zooming issue on mobile screens

--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    touch-action: manipulation; /* Забранява зуумване при клик */
 }
 
 /* ---------------------------------------------------------------------------- */
